# engoo-daily-news-writer

./: .env.example  .gitignore  DISTRIBUTION_GUIDE.md  NON_TECHNICAL_READY.md  README.md  README_EDUCATORS.md  SETUP_COMPLETE.md  create_release_package.sh  demo.py  easy_install.bat  easy_install.sh  engoo-writer  engoo_template.html  gui_launcher.py  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  test_setup.py
.github/: copilot-instructions.md
src/: __init__.py  agent.py  github_gist.py  models.py  processor.py  scraper.py
tests/: __init__.py  test_models.py  test_scraper.py
